error causing routes and actions

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DB_DATABASE=ignition_error_repo
 DB_USERNAME=root
 DB_PASSWORD=
 
+IGNITION_EDITOR=vscode
+IGNITION_SHARING_ENABLED=false
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
